--- a/pages/pageProjects/style.css
+++ b/pages/pageProjects/style.css
@@ -23,13 +23,18 @@
 }
 
 .links-projects .card-project {
-    border-radius: 5px;
     padding: 20px 10px;
     gap: 8px;
-    background-color: var(--primary-color);
+    backdrop-filter: blur(10px);
+    background: rgba( 255, 255, 255, 0.25 );
+    box-shadow: 0 8px 32px 0 rgba(20 0 0 / 50%);
     display: flex;
     flex-direction: column;
     align-items: center;
+    -webkit-backdrop-filter: 
+    blur(10px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
 .card-project .project-title {
@@ -91,7 +96,7 @@
 }
 
 .card-project .veja-mais a:hover {
-    background-color: #dc4d37c7;
+    background-color: #f7a194dd;
     text-shadow: 1px 1px var(--secondary-color);
     transform: scale(1.05);
 }
