--- a/style/style.css
+++ b/style/style.css
@@ -78,7 +78,6 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 90%;
 }
 
 .main-container .welcome-section .text-welcome {
@@ -118,6 +117,7 @@ body {
 }
 
 .main-container .list-infor ul li {
+    width: 100%;
     backdrop-filter: blur(10px);
     background: rgba(255, 255, 255, 0.25);
     box-shadow: 0 8px 32px 0 rgba(20 0 0 / 20%);
@@ -160,7 +160,6 @@ body {
     }
 
     .main-container .welcome-section {
-        height: 88vh;
         align-items: center;
     }
 
@@ -169,11 +168,11 @@ body {
     }
 
     .welcome-section .text-welcome h1 {
-        font-size: 4.8rem;
+        font-size: 4rem;
     }
 
     .welcome-section .text-welcome p {
-        font-size: 2.1rem;
+        font-size: 1.5rem;
         font-weight: 500;
     }
 
