--- a/style/style.css
+++ b/style/style.css
@@ -77,7 +77,7 @@ body {
 .main-container .welcome-section {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    height: 100%;
 }
 
 .main-container .welcome-section .text-welcome {
@@ -161,6 +161,7 @@ body {
 
     .main-container .welcome-section {
         align-items: center;
+        gap: 24px;
     }
 
     .main-container .welcome-section .text-welcome {
