--- a/pages/pageAbout/style.css
+++ b/pages/pageAbout/style.css
@@ -12,41 +12,78 @@
 .about-container .about-section {
     display: flex;
     height: 800px;
+    border-radius: 10px;
+    backdrop-filter: blur(10px);
+    background: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(20 0 0 / 20%);
+    -webkit-backdrop-filter: blur(10px);
+    border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
 .about-section .foto-about {
-    width: 100%;
+    width: 77%;
+    border-radius: 10px;
     background-image: url('../../imgs/homem.jpg');
     background-size: cover;
-} 
+    background-position: center;
+}
 
 .about-section .text-about {
     width: 100%;
     padding: 20px;
-    background-color: var(--primary-color);
 }
-.about-section .text-about h2{
+
+.about-section .text-about h2 {
+    margin-bottom: 10px;
+    font-family: var(--font-family);
+    color: var(--primary-color);
+}
+
+.about-section .text-about h3 {
     margin-bottom: 10px;
     font-family: var(--font-family);
 }
-.about-section .text-about h3{
+
+.about-section .text-about p {
     margin-bottom: 10px;
+    
     font-family: var(--font-family);
 }
-.about-section .text-about p{
-    margin-bottom: 10px;
-    font-family: var(--font-family);
-}
+
+
 .about-section .text-about .list-about {
     padding: 0px 20px;
 }
+
 .about-section .text-about .list-about h4 {
-    margin-bottom: 10px;    
+    margin-bottom: 10px;
+    color: var(--primary-color);
 }
+
 .about-section .text-about .list-about li {
-    list-style-type: disc;    
+    list-style-type: disc;
 }
-.about-section .text-about .list-about li p span{
-    color: #000;
-    font-weight: 600;    
+
+.about-section .text-about .list-about li p span {
+    color: var(--primary-color);
+    font-weight: 600;
+}
+
+/* RESPONSIVIDADE 918 */
+@media (max-width: 918px) {
+    .about-container {
+        padding: 7px 20px;
+    }
+
+    .about-container .about-section {
+        width: 100%;
+        height: 100%;
+        flex-direction: column;
+    }
+
+    .about-section .foto-about {
+        width: 100%;
+        height: 48rem;
+    }
+
 }
