--- a/pages/pageContact/style.css
+++ b/pages/pageContact/style.css
@@ -127,4 +127,25 @@
         width: 100%;
         padding: 10px 20px;
     }
+
+    .form-contact {
+        padding: 40px 20px;
+        gap: 10px;
+    }
+
+    .form-contact h2 {
+        text-align: center;
+        font-size: 1.7rem;
+    }
+
+    .form-contact form {
+        padding: 0px 0px;
+    }
+
+    .form-contact form .form-inputs div {
+        width: 100%;
+    }
+
+
+
 }
