--- a/style/style.css
+++ b/style/style.css
@@ -72,7 +72,7 @@ body {
 .main-container {
     padding: 10px 20px;
     width: 100%;
-    height: 91vh;
+    height: 86vh;
 }
 
 .main-container .welcome-section {
@@ -145,6 +145,45 @@ body {
     text-align: center;
 }
 
+.rodape-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    gap: 10px;
+}
+
+.rodape-container .rodape-links-redes-sociais {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    gap: 8px;
+    padding-top: 10px;
+    border-top: 1px solid var(--accent-color);
+}
+
+.rodape-links-redes-sociais .cart-rede a {
+    width: 50px;
+    height: 50px;
+}
+
+.rodape-links-redes-sociais .cart-rede a i {
+    font-size: 1.7rem;
+    color: var(--secondary-color);
+}
+
+.rodape-links-redes-sociais .cart-rede a i:hover {
+    font-size: 1.7rem;
+    color: var(--primary-color);
+}
+
+.rodape-container .copy {
+    text-align: center;
+    padding-bottom: 10px;
+    font-weight: 500;
+}
+
+
 /* RESPONSIVIDADE 918PX*/
 @media (max-width: 918px) {
     .header-container {
@@ -160,6 +199,10 @@ body {
         justify-content: center;
         width: 100%;
         gap: 15px;
+    }
+
+    .main-container {
+        height: 100%;
     }
 
     .main-container .welcome-section {
