--- a/style/style.css
+++ b/style/style.css
@@ -162,10 +162,10 @@ body {
     border-top: 1px solid var(--accent-color);
 }
 
-.rodape-links-redes-sociais .cart-rede a {
+/* .rodape-links-redes-sociais .cart-rede a {
     width: 50px;
     height: 50px;
-}
+} */
 
 .rodape-links-redes-sociais .cart-rede a i {
     font-size: 1.7rem;
