--- a/pages/pageAbout/style.css
+++ b/pages/pageAbout/style.css
@@ -44,33 +44,58 @@
 }
 
 .about-section .text-about h3 {
-    margin-bottom: 10px;
     font-family: var(--font-family);
 }
 
 .about-section .text-about p {
-    margin-bottom: 10px;
-
+    margin-top: 10px;
     font-family: var(--font-family);
 }
 
-
 .about-section .text-about .list-about {
-    padding: 0px 20px;
+    width: 100%;
+    padding: 20px;
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+    justify-items: center;
 }
 
 .about-section .text-about .list-about h4 {
-    margin-bottom: 10px;
+    padding: 10px 0px;
+    font-size: 24px;
     color: var(--primary-color);
 }
 
-.about-section .text-about .list-about li {
-    list-style-type: disc;
+.about-container .text-about .list-about li {
+    width: 100%;
 }
 
-.about-section .text-about .list-about li p span {
+.about-section .text-about .list-about li ul{
+    width: 100%;
+    display: grid;
+    grid-gap: 6px;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto;
+}
+.about-section .text-about .list-about li ul li{
+    width: 100%;
+    gap: 1px;
+    border-radius: 10px;
+    padding: 15px 0px;
+    background-color: var(--secondary-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.about-section .text-about .list-about li ul li h6{
     color: var(--primary-color);
-    font-weight: 600;
+    font-size: 23px;
+    
+}
+.about-section .text-about .list-about li ul li i{
+    color: var(--primary-color);
+    font-size: 39px;
 }
 
 .formacao-container {
