A justando texte de card da page projetos

--- a/pages/pageProjects/style.css
+++ b/pages/pageProjects/style.css
@@ -54,6 +54,11 @@
     height: 100%;
     border-radius: 5px;
 }
+.card-project .project-descricao {
+    height: 100%;
+    text-align: justify;
+}
+
 
 .card-project .project-tecnologia-utilizador {
     width: 100%;
