--- a/pages/pageAbout/style.css
+++ b/pages/pageAbout/style.css
@@ -1,6 +1,9 @@
 .about-container {
     width: 100%;
     padding: 7px 0px;
+    gap: 20px;
+    display: flex;
+    flex-direction: column;
 }
 
 .about-container .title-about {
@@ -11,19 +14,20 @@
 
 .about-container .about-section {
     display: flex;
-    height: 800px;
+    width: 100%;
+    height: 100%;
     border-radius: 10px;
-    backdrop-filter: blur(10px);
-    background: rgba(255, 255, 255, 0.25);
+    background: rgba(255, 255, 255, 0.1);
     box-shadow: 0 8px 32px 0 rgba(20 0 0 / 20%);
-    -webkit-backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(11px);
+    backdrop-filter: blur(11px);
     border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
 .about-section .foto-about {
-    width: 77%;
+    width: 100%;
     border-radius: 10px;
-    background-image: url('../../imgs/homem.jpg');
+    background-image: url('../../imgs/20250702_0837_Jovem\ Relaxando\ na\ Praia_remix_01jz5er4w5et79gvw65e05kdvk.png');
     background-size: cover;
     background-position: center;
 }
@@ -46,7 +50,7 @@
 
 .about-section .text-about p {
     margin-bottom: 10px;
-    
+
     font-family: var(--font-family);
 }
 
@@ -69,6 +73,32 @@
     font-weight: 600;
 }
 
+.formacao-container {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    background: rgba(255, 255, 255, 0.1);
+    box-shadow: 0 8px 32px 0 rgba(20 0 0 / 20%);
+    -webkit-backdrop-filter: blur(11px);
+    backdrop-filter: blur(11px);
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    padding: 20px;
+}
+
+.formacao-container .formacao-title {
+    width: 100%;
+    padding: 10px 0px;
+}
+
+.formacao-container .formacao-title h2 {
+    color: var(--primary-color);
+    text-align: center;
+}
+
+
+
+
+
 /* RESPONSIVIDADE 918 */
 @media (max-width: 918px) {
     .about-container {
@@ -76,8 +106,6 @@
     }
 
     .about-container .about-section {
-        width: 100%;
-        height: 100%;
         flex-direction: column;
     }
 
