--- a/style/style.css
+++ b/style/style.css
@@ -5,6 +5,7 @@
     --accent-color: #333333c6;
     --font-family: "Poppins", sans-serif;
     --font-family-secondary: "Anton", sans-serif;
+    --box-shadow: 0 8px 32px 0 rgba(20 0 0 / 20%);
 }
 
 * {
@@ -121,15 +122,14 @@ body {
 
 .main-container .list-infor ul li {
     width: 100%;
-    height: 115px;
-    backdrop-filter: blur(10px);
-    background: rgba(255, 255, 255, 0.25);
+    backdrop-filter: blur(11px);
+    background: rgba(255, 255, 255, 0.1);
     box-shadow: 0 8px 32px 0 rgba(20 0 0 / 20%);
     display: flex;
     flex-direction: column;
     align-items: center;
     -webkit-backdrop-filter:
-        blur(10px);
+        blur(11px);
     border-radius: 10px;
     border: 1px solid rgba(255, 255, 255, 0.18);
     padding: 10px 20px;
