--- a/pages/pageAbout/style.css
+++ b/pages/pageAbout/style.css
@@ -101,6 +101,7 @@
     color: var(--primary-color);
     font-size: 39px;
 }
+
 .about-section .text-about .list-about li ul li i:hover {
     color: var(--background-color);
     font-size: 39px;
@@ -123,10 +124,52 @@
     padding: 10px 0px;
 }
 
-.formacao-container .formacao-title h2 {
+.formacao-container .formacao-title h1 {
     color: var(--primary-color);
     text-align: center;
 }
+
+.formacao-container .formacao-mais-detalhes {
+    width: 100%;
+    height: 100%;
+}
+
+.formacao-container .formacao-mais-detalhes .cards-formacao {
+    width: 100%;
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: auto auto;
+}
+
+.formacao-mais-detalhes .cards-formacao li {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.cards-formacao li .card-formacao-title {
+    width: 100%;
+    padding: 10px;
+    text-align: center;
+}
+
+.cards-formacao li .card-formacao-title h2 {
+    color: var(--secondary-color);
+}
+
+.cards-formacao li ul {
+    padding: 15px;
+    border-radius: 10px;
+    background-color: #33333321;
+    box-shadow: 0 8px 32px 0 rgba(20 0 0 / 20%);
+    border: 1px solid rgba(255, 255, 255, 0.18);
+}
+
+.cards-formacao li ul .card-academico .card-title-descript .title h4 {
+    color: var(--primary-color);
+    font-size: 18px;
+}
+
 
 
 
@@ -148,6 +191,10 @@
 
     .about-section .text-about .list-about li ul {
         grid-gap: 10px;
+        grid-template-columns: auto;
+    }
+
+    .formacao-container .formacao-mais-detalhes .cards-formacao {
         grid-template-columns: auto;
     }
 
