--- a/style/style.css
+++ b/style/style.css
@@ -29,6 +29,8 @@ body {
     align-items: center;
 }
 
+/* MENU DA PAGINA */
+
 .header-container {
     display: flex;
     align-items: center;
@@ -69,6 +71,8 @@ body {
     color: var(--primary-color);
 
 }
+
+/* CONTEUDO DA PAGINA */
 
 .main-container {
     padding: 10px 20px;
@@ -145,6 +149,8 @@ body {
     text-align: center;
 }
 
+/* RODAPE DO PAGINA */
+
 .rodape-container {
     display: flex;
     flex-direction: column;
@@ -161,7 +167,6 @@ body {
     padding-top: 10px;
     border-top: 1px solid var(--accent-color);
 }
-
 
 .rodape-links-redes-sociais .cart-rede a {
     width: 40PX;
