--- a/pages/pageAbout/style.css
+++ b/pages/pageAbout/style.css
@@ -1,7 +1,7 @@
 /* CORPA DA PAGINA */
 .about-container {
     width: 100%;
-    padding: 7px 0px;
+    padding: 20px;
     gap: 20px;
     display: flex;
     flex-direction: column;
@@ -221,10 +221,7 @@
 
 /* RESPONSIVIDADE 918 */
 @media (max-width: 918px) {
-    .about-container {
-        padding: 7px 20px;
-    }
-
+    
     .about-container .about-section {
         flex-direction: column;
     }
