--- a/pages/pageContact/style.css
+++ b/pages/pageContact/style.css
@@ -1,3 +1,4 @@
+/* CORPO DA PAGINA */
 .contact-container {
     width: 100%;
     padding: 7px 0px;
@@ -11,6 +12,7 @@
     color: var(--primary-color);
 }
 
+/* FORMULARIO DO SITE PARA CONTATO */
 .form-contact {
     display: flex;
     flex-direction: column;
@@ -50,6 +52,7 @@
 .form-contact form .form-inputs div {
     width: 32rem;
     height: 50px;
+    border-radius: 6px;
     border: 1px solid var(--primary-color);
     display: flex;
 }
@@ -63,7 +66,7 @@
 }
 
 .form-contact form .form-inputs div label i {
-    color: var(--secondary-color);
+    color: var(--primary-color);
     font-size: 2rem;
     padding: 0px 10px;
 }
@@ -72,6 +75,7 @@
     width: 100%;
     height: 100%;
     font-size: 16px;
+    border-radius: 15px 5px 5px 0px;
     padding: 0px 10px;
     border: none;
 }
@@ -81,6 +85,7 @@
     border: 3px solid var(--background-color);
 }
 
+/* BOTAO DE ENVIAR FORMULARIO */
 .form-contact form .form-inputs .message-btn {
     height: 100%;
     gap: 20px;
@@ -93,6 +98,7 @@
     width: 100%;
     height: 242px;
     font-size: 16px;
+    border-radius: 10px;
     padding: 10px;
     resize: none;
 }
@@ -125,6 +131,7 @@
     transition: 0.3s;
 }
 
+/* RESPONSIVIDADE */
 @media (max-width: 918px) {
     .contact-container {
         width: 100%;
