--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,4 @@
+/* CSS GOBAL PADRAO */
 :root {
     --background-color: #DC4D37;
     --primary-color: #F2F5FA;
@@ -30,7 +31,6 @@ body {
 }
 
 /* MENU DA PAGINA */
-
 .header-container {
     display: flex;
     align-items: center;
@@ -73,7 +73,6 @@ body {
 }
 
 /* CONTEUDO DA PAGINA */
-
 .main-container {
     padding: 10px 20px;
     width: 100%;
@@ -150,7 +149,6 @@ body {
 }
 
 /* RODAPE DO PAGINA */
-
 .rodape-container {
     display: flex;
     flex-direction: column;
@@ -197,7 +195,7 @@ body {
 }
 
 
-/* RESPONSIVIDADE 918PX*/
+/* RESPONSIVIDADE DO SITE 918PX*/
 @media (max-width: 918px) {
     .header-container {
         flex-direction: column;
