--- a/pages/pageAbout/style.css
+++ b/pages/pageAbout/style.css
@@ -28,7 +28,7 @@
 .about-section .foto-about {
     width: 100%;
     border-radius: 10px;
-    background-image: url('../../imgs/20250702_0837_Jovem\ Relaxando\ na\ Praia_remix_01jz5er4w5et79gvw65e05kdvk.png');
+    background-image: url('../../imgs/img-perfil.png');
     background-size: cover;
     background-position: center;
 }
